# oxira-network

./: LICENSE  README.md  main.py  pyproject.toml
agents/: ai_agent.py
client/: stateless.py
compiler/: solidity_compiler.py
consensus/: pos.py
core/: block.py  blockchain.py  state.py  transaction.py
crypto/: wallet.py
evm/: deploy.py  mini_evm.py
networking/: mempool.py  messages.py  node.py
receipts/: logs.py  receipt.py
rollup/: l2.py
tests/: test_blockchain.py  test_evm.py  test_extra.py  test_misc.py  test_wallet.py
trie/: mpt.py
utils/: hashing.py
